content (papierkowe, projektowe, budowlane)

--- a/sprawy-budowlane.html
+++ b/sprawy-budowlane.html
@@ -29,11 +29,15 @@
     <header hx-get="htmx-elements/header.html" hx-trigger="load"></header>
     <section class="subpage-lead">
       <h1>Sprawy budowlane</h1>
-      <p>
-        Jak się zabrać do wykańczania? Umowa z majstrem/firmą, gdzie kupować
+      <!-- Jak się zabrać do wykańczania? Umowa z majstrem/firmą, gdzie kupować
         materiały, kolejność prac, jak zapanować nad kolejnością, żeby nie
         marnować czasu pomiędzy (np. czekając na materiały). Tutaj wzór umowy z
-        majstrem?! (maybe do pobrania)
+        majstrem?! (maybe do pobrania)-->
+      <p>
+        Gdy projekt jest gotowy, czas się zabrać za wykańczanie. Ale jak? W tej
+        części pogadamy o umowach z ekipą budowlaną, kolejności prac
+        wykończeniowych i o tym, jak nie zwariować w trakcie tego całego procesu
+        (spoiler: nie będzie łatwo).
       </p>
     </section>
     <section class="subpage-content">
@@ -44,6 +48,12 @@
           prostą, a dla inżyniera z poziomicą laserową jest totalnie krzywa.
           Dlatego może warto zapłacić komuś za towarzystwo przy odbiorze
           technicznym.
+        </p>
+        <p>
+          Większość firm zajmujących się odbiorem mieszkań oferuje też gotowy
+          raport usterek po spotkaniu. Podgląd fragmentu takiego raportu możesz
+          zobaczyć poniżej. Warto poprosić o taki dokument, może się przydać,
+          gdy deweloper nie będzie chciał współpracować.
         </p>
         <div class="album">
           <picture class="album">
@@ -66,7 +76,7 @@
             <li>kuchnia</li>
             <li>łazienka</li>
             <li>materac</li>
-            <li>pralka?</li>
+            <li>pralka</li>
           </ul>
           <li>Potem to, co przydatne, żeby nie żyć jak na campingu:</li>
           <ul>
