--- a/sprawy-papierkowe.html
+++ b/sprawy-papierkowe.html
@@ -41,31 +41,44 @@
     <section class="subpage-content">
       <article>
         <h1>Do załatwienia z deweloperem</h1>
+        <!--  Najpierw z deweloperem - czy to osobno? Potem umowa rezerwacji,
+          kredytowe wnioski, potem podatki, zgłoszenia, wpisy do KW.-->
         <p>
-          Najpierw z deweloperem - czy to osobno? Potem umowa rezerwacji,
-          kredytowe wnioski, potem podatki, zgłoszenia, wpisy do KW.
+          Tutaj po kolei: umowa rezerwacji, potem umowa deweloperska, a na końcu
+          akt przekazania własności.
         </p>
       </article>
       <article>
         <h1>Do załatwienia z bankiem/doradcą finansowym</h1>
-        <p>kredytowe wnioski, potem podatki, zgłoszenia, wpisy do KW.</p>
+        <p>
+          Najpierw wstępne rozpoznanie i wnioski kredytowe (najlepiej do kilku
+          banków). Potem konkretna umowa kredytu i reszta w zależności od jej
+          postanowień.
+        </p>
       </article>
       <article>
         <h1>Bonus: ubezpieczenie mieszkania</h1>
         <p>
-          w zasadzie mogłoby być i z deweloperem, i z bankiem, bo dowód
-          posiadanego ubezpieczenia przydaje się w kilku miejscach; często jest
-          specjalna oferta dla nowych osiedli - poczekaj na info od sąsiadów/na
-          klatce
+          W zasadzie mogłoby być zarówno w części do załatwienia z deweloperem,
+          jak i z bankiem, bo dowód posiadanego ubezpieczenia przydaje się w
+          kilku miejscach. Często gdy powstaje nowe osiedle, to niektóre firmy
+          ubezpieczeniowe przygotowują specjalną ofertę dla tego obszaru - jeśli
+          możesz, poczekaj na info od sąsiadów albo ogłoszenie na klatce.
         </p>
       </article>
       <article>
         <h1>Do załatwienia z urzędami wszelkiej maści</h1>
-        <p>podatki, zgłoszenia, wpisy do KW</p>
+        <p>
+          Sporo rzeczy, więcej niż przez całe poprzednie życie: podatki od
+          nieruchomości, zgłoszenia do skarbówki, wpisy do Księgi Wieczystej...
+        </p>
       </article>
       <article>
         <h1>Do załatwienia z dostawcami mediów</h1>
-        <p>prąd, woda, gaz, internet, telewizja - co kto lubi</p>
+        <p>
+          Podstawy, które będą Ci potrzebne do docelowego życia w tym
+          mieszkaniu: prąd, woda, gaz, internet, telewizja - co kto lubi.
+        </p>
         <div class="tiles">
           <div>
             <h2>Prąd</h2>
@@ -73,21 +86,21 @@
           </div>
           <div>
             <h2>Woda</h2>
-            <p>najpewniej wspólnota/zarządca</p>
+            <p>najpewniej ogarnia wspólnota/zarządca</p>
           </div>
           <div>
             <h2>Ogrzewanie</h2>
-            <p>najpewniej wspólnota/zarządca</p>
+            <p>najpewniej ogarnia wspólnota/zarządca</p>
           </div>
           <div>
-            <h2>Gaz - jeśli jest!</h2>
-            <p>najpewniej wspólnota/zarządca</p>
+            <h2>Gaz - jeśli jest potrzebny!</h2>
+            <p>najpewniej ogarnia wspólnota/zarządca</p>
           </div>
           <div>
             <h2>Internet i telewizja</h2>
             <p>
-              poczekaj i zobacz, czy nie ma przedstawiciela dzielnicy/obszaru
-              danych dostawców/firm
+              tutaj uwaga: poczekaj i zobacz, czy nie ma przedstawiciela
+              dzielnicy/obszaru danych dostawców/firm
             </p>
           </div>
         </div>
@@ -95,9 +108,11 @@
       <article>
         <h1>Bonus nr 2: wspólnota mieszkaniowa lub zarządca</h1>
         <p>
-          prawdopodobnie będziecie chcieli zmienić zarządcę, którego narzucił
+          Prawdopodobnie będziecie chcieli zmienić zarządcę, którego narzucił
           deweloper. Warto wykorzystać wczesny etap, kiedy sąsiedzi są jeszcze
-          dość zaangażowani i obecni - potem sporo ludzi wynajmuje
+          dość zaangażowani i obecni - potem sporo ludzi wynajmuje mieszkania i
+          przestaje się nimi interesować. Z drugiej strony: do takiej zmiany
+          potrzebujecie większości głosów właścicieli mieszkań.
         </p>
       </article>
     </section>
