--- a/sprawy-projektowe.html
+++ b/sprawy-projektowe.html
@@ -29,10 +29,16 @@
     <header hx-get="htmx-elements/header.html" hx-trigger="load"></header>
     <section class="subpage-lead">
       <h1>Sprawy projektowe</h1>
-      <p>
-        stolarz vs Ikea; - zdjęcia/obrazy??? może np. kiepskie floor plany i jak
+      <!-- stolarz vs Ikea; - zdjęcia/obrazy??? może np. kiepskie floor plany i jak
         je poprawić? / - cały dział projektowanie: czego w ogóle chcesz od tego
-        mieszkania? - tricki architektoniczne, typu kolorowy sufit, ukryte drzwi
+        mieszkania? - tricki architektoniczne, typu kolorowy sufit, ukryte drzwi 
+        -->
+      <p>
+        Zaczynasz się zastanawiać: stolarz czy Ikea? Zacznij od tego, czego w
+        ogóle chcesz od swojego mieszkania. Z czasem postaram się też podrzucić
+        tu kilka mniej banalnych rozwiązań, na które my postawiliśmy – na
+        przykład kolorowe sufity, ukryte drzwi czy okienko między biurem a
+        kuchnią rodem ze szkolnej stołówki.
       </p>
     </section>
     <section class="subpage-content">
