--- a/htmx-elements/header.html
+++ b/htmx-elements/header.html
@@ -1,14 +1,8 @@
 <p class="title">MieszkAnka</p>
 <nav>
-  <button><a href="./index.html">Strona główna</a></button>
-  <button>
-    <a href="./sprawy-koncepcyjne.html">Sprawy koncepcyjne</a>
-  </button>
-  <button>
-    <a href="./sprawy-papierkowe.html">Sprawy papierkowe</a>
-  </button>
-  <button>
-    <a href="./sprawy-projektowe.html">Sprawy projektowe</a>
-  </button>
-  <button><a href="./sprawy-budowlane.html">Sprawy budowlane</a></button>
+  <a href="./index.html">Strona główna</a>
+  <a href="./sprawy-koncepcyjne.html">Sprawy koncepcyjne</a>
+  <a href="./sprawy-papierkowe.html">Sprawy papierkowe</a>
+  <a href="./sprawy-projektowe.html">Sprawy projektowe</a>
+  <a href="./sprawy-budowlane.html">Sprawy budowlane</a>
 </nav>
