--- a/index.html
+++ b/index.html
@@ -50,15 +50,8 @@
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <header hx-get="htmx-elements/header.html" hx-trigger="load"></header>
-    <section>
-      <p
-        style="
-          margin-left: 25%;
-          margin-top: 4%;
-          padding: 12px;
-          font-style: italic;
-        "
-      >
+    <section class="main-quote">
+      <p>
         Lubisz mieć dach nad głową? Jasne, to dość popularne hobby. Wszyscy
         chcemy być domni. Jeśli planujesz opuścić grono wierzących
         niepraktykujących i w końcu przenieść się na swoje - może nie być lekko.
