swap htmx architecture

--- a/sprawy-budowlane.html
+++ b/sprawy-budowlane.html
@@ -1,137 +1,66 @@
-<!DOCTYPE html>
-<html lang="pl">
-  <head>
-    <!-- Google Tag Manager -->
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-53VRCPPP");
-    </script>
-    <!-- End Google Tag Manager -->
-    <title>Sprawy budowlane – MieszkAnka</title>
-    <!-- Google Tag Manager -->
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-53VRCPPP");
-    </script>
-    <!-- End Google Tag Manager -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js"></script>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- paragraph + h1-h2 font -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-    />
-    <!-- title font -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-    />
-    <link rel="stylesheet" href="style/main-stylesheet.css" />
-    <meta
-      name="description"
-      content="Poradnik, który tworzę w trakcie kupowania pierwszego mieszkania."
-    />
-    <meta name="author" content="amk" />
-  </head>
-  <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-53VRCPPP"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <header hx-get="htmx-elements/header.html" hx-trigger="load"></header>
-    <section class="subpage-lead">
-      <h1>Sprawy budowlane</h1>
-      <!-- Jak się zabrać do wykańczania? Umowa z majstrem/firmą, gdzie kupować
+<section class="subpage-lead">
+  <h1>Sprawy budowlane</h1>
+  <!-- Jak się zabrać do wykańczania? Umowa z majstrem/firmą, gdzie kupować
         materiały, kolejność prac, jak zapanować nad kolejnością, żeby nie
         marnować czasu pomiędzy (np. czekając na materiały). Tutaj wzór umowy z
         majstrem?! (maybe do pobrania)-->
-      <p>
-        Gdy projekt jest gotowy, czas się zabrać za wykańczanie. Ale jak? W tej
-        części pogadamy o umowach z ekipą budowlaną, kolejności prac
-        wykończeniowych i o tym, jak nie zwariować w trakcie tego całego procesu
-        (spoiler: nie będzie łatwo).
-      </p>
-    </section>
-    <section class="subpage-content">
-      <article>
-        <h1>Odbiór mieszkania z ekspertem</h1>
-        <p>
-          Dla mnie ściana wygląda na prostą. Dla poziomicy na trochę mniej
-          prostą, a dla inżyniera z poziomicą laserową jest totalnie krzywa.
-          Dlatego może warto zapłacić komuś za towarzystwo przy odbiorze
-          technicznym.
-        </p>
-        <p>
-          Większość firm zajmujących się odbiorem mieszkań oferuje też gotowy
-          raport usterek po spotkaniu. Podgląd fragmentu takiego raportu możesz
-          zobaczyć poniżej. Warto poprosić o taki dokument, może się przydać,
-          gdy deweloper nie będzie chciał współpracować.
-        </p>
-        <div class="album">
-          <picture class="album">
-            <img
-              class="album-item"
-              src="media/raport.jpg"
-              alt="Fragment raportu odbioru mieszkania z inżynierem. Widoczne logo firmy inspekcjadomu.pl i dwa zdjęcia wnętrza wentylacji."
-              width="80%"
-            />
-          </picture>
-        </div>
-      </article>
-      <article>
-        <h1>Kolejność wykańczania</h1>
-        <ol>
-          <li>Najpierw to, co niezbędne do wprowadzenia się:</li>
-          <ul>
-            <li>ściany, podlogi, sufity</li>
-            <li>instalacje (elektryka,hydraulika)</li>
-            <li>kuchnia</li>
-            <li>łazienka</li>
-            <li>materac</li>
-            <li>pralka</li>
-          </ul>
-          <li>Potem to, co przydatne, żeby nie żyć jak na campingu:</li>
-          <ul>
-            <li>łóżko</li>
-            <li>biuro</li>
-            <li>kanapa lub fotele do siedzenia</li>
-          </ul>
-          <li>Na końcu dodatki:</li>
-          <ul>
-            <li>pozostałe meble (sincerely, po co Ci one?)</li>
-            <li>balkon</li>
-            <li>dywany</li>
-            <li>dekoracje (patrz: pozostałe meble)</li>
-          </ul>
-        </ol>
-      </article>
-    </section>
-  </body>
-  <footer hx-get="htmx-elements/footer.html" hx-trigger="load"></footer>
-</html>
+  <p>
+    Gdy projekt jest gotowy, czas się zabrać za wykańczanie. Ale jak? W tej
+    części pogadamy o umowach z ekipą budowlaną, kolejności prac wykończeniowych
+    i o tym, jak nie zwariować w trakcie tego całego procesu (spoiler: nie
+    będzie łatwo).
+  </p>
+</section>
+<section class="subpage-content">
+  <article>
+    <h1>Odbiór mieszkania z ekspertem</h1>
+    <p>
+      Dla mnie ściana wygląda na prostą. Dla poziomicy na trochę mniej prostą, a
+      dla inżyniera z poziomicą laserową jest totalnie krzywa. Dlatego może
+      warto zapłacić komuś za towarzystwo przy odbiorze technicznym.
+    </p>
+    <p>
+      Większość firm zajmujących się odbiorem mieszkań oferuje też gotowy raport
+      usterek po spotkaniu. Podgląd fragmentu takiego raportu możesz zobaczyć
+      poniżej. Warto poprosić o taki dokument, może się przydać, gdy deweloper
+      nie będzie chciał współpracować.
+    </p>
+    <div class="album">
+      <picture class="album">
+        <img
+          class="album-item"
+          src="media/raport.jpg"
+          alt="Fragment raportu odbioru mieszkania z inżynierem. Widoczne logo firmy inspekcjadomu.pl i dwa zdjęcia wnętrza wentylacji."
+          width="80%"
+        />
+      </picture>
+    </div>
+  </article>
+  <article>
+    <h1>Kolejność wykańczania</h1>
+    <ol>
+      <li>Najpierw to, co niezbędne do wprowadzenia się:</li>
+      <ul>
+        <li>ściany, podlogi, sufity</li>
+        <li>instalacje (elektryka,hydraulika)</li>
+        <li>kuchnia</li>
+        <li>łazienka</li>
+        <li>materac</li>
+        <li>pralka</li>
+      </ul>
+      <li>Potem to, co przydatne, żeby nie żyć jak na campingu:</li>
+      <ul>
+        <li>łóżko</li>
+        <li>biuro</li>
+        <li>kanapa lub fotele do siedzenia</li>
+      </ul>
+      <li>Na końcu dodatki:</li>
+      <ul>
+        <li>pozostałe meble (sincerely, po co Ci one?)</li>
+        <li>balkon</li>
+        <li>dywany</li>
+        <li>dekoracje (patrz: pozostałe meble)</li>
+      </ul>
+    </ol>
+  </article>
+</section>
