--- a/sprawy-papierkowe.html
+++ b/sprawy-papierkowe.html
@@ -1,145 +1,88 @@
-<!DOCTYPE html>
-<html lang="pl">
-  <head>
-    <!-- Google Tag Manager -->
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-53VRCPPP");
-    </script>
-    <!-- End Google Tag Manager -->
-    <title>Sprawy papierkowe – MieszkAnka</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js"></script>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- paragraph + p-h2 font -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-    />
-    <!-- title font -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-    />
-    <link rel="stylesheet" href="style/main-stylesheet.css" />
-    <meta
-      name="description"
-      content="Poradnik, który tworzę w trakcie kupowania pierwszego mieszkania."
-    />
-    <meta name="author" content="amk" />
-  </head>
-  <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-53VRCPPP"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <header hx-get="htmx-elements/header.html" hx-trigger="load"></header>
-    <section class="subpage-lead">
-      <h1>Sprawy papierkowe</h1>
-      <p>
-        Podatki i przepisy z dupy, czyli z czym do jakiego urzędu i o co chodzi
-        notariuszowi. A także: skąd się bierze prąd, czyli z kim i co trzeba
-        załatwić? Oraz: czy bank odmówi mi kredytu, jeśli w tytule przelewu do
-        kolegi wpiszę "hajs za narkotyki"? Spróbujemy przez to przejść po kolei,
-        od momentu, w którym decydujesz się na zakup tego konkretnego
-        mieszkania.
-      </p>
-    </section>
-    <section class="subpage-content">
-      <article>
-        <h1>Do załatwienia z deweloperem</h1>
-        <!--  Najpierw z deweloperem - czy to osobno? Potem umowa rezerwacji,
+<section class="subpage-lead">
+  <h1>Sprawy papierkowe</h1>
+  <p>
+    Podatki i przepisy z dupy, czyli z czym do jakiego urzędu i o co chodzi
+    notariuszowi. A także: skąd się bierze prąd, czyli z kim i co trzeba
+    załatwić? Oraz: czy bank odmówi mi kredytu, jeśli w tytule przelewu do
+    kolegi wpiszę "hajs za narkotyki"? Spróbujemy przez to przejść po kolei, od
+    momentu, w którym decydujesz się na zakup tego konkretnego mieszkania.
+  </p>
+</section>
+<section class="subpage-content">
+  <article>
+    <h1>Do załatwienia z deweloperem</h1>
+    <!--  Najpierw z deweloperem - czy to osobno? Potem umowa rezerwacji,
           kredytowe wnioski, potem podatki, zgłoszenia, wpisy do KW.-->
+    <p>
+      Tutaj po kolei: umowa rezerwacji, potem umowa deweloperska, a na końcu akt
+      przekazania własności.
+    </p>
+  </article>
+  <article>
+    <h1>Do załatwienia z bankiem/doradcą finansowym</h1>
+    <p>
+      Najpierw wstępne rozpoznanie i wnioski kredytowe (najlepiej do kilku
+      banków). Potem konkretna umowa kredytu i reszta w zależności od jej
+      postanowień.
+    </p>
+  </article>
+  <article>
+    <h1>Bonus: ubezpieczenie mieszkania</h1>
+    <p>
+      W zasadzie mogłoby być zarówno w części do załatwienia z deweloperem, jak
+      i z bankiem, bo dowód posiadanego ubezpieczenia przydaje się w kilku
+      miejscach. Często gdy powstaje nowe osiedle, to niektóre firmy
+      ubezpieczeniowe przygotowują specjalną ofertę dla tego obszaru - jeśli
+      możesz, poczekaj na info od sąsiadów albo ogłoszenie na klatce.
+    </p>
+  </article>
+  <article>
+    <h1>Do załatwienia z urzędami wszelkiej maści</h1>
+    <p>
+      Sporo rzeczy, więcej niż przez całe poprzednie życie: podatki od
+      nieruchomości, zgłoszenia do skarbówki, wpisy do Księgi Wieczystej...
+    </p>
+  </article>
+  <article>
+    <h1>Do załatwienia z dostawcami mediów</h1>
+    <p>
+      Podstawy, które będą Ci potrzebne do docelowego życia w tym mieszkaniu:
+      prąd, woda, gaz, internet, telewizja - co kto lubi.
+    </p>
+    <div class="tiles">
+      <div>
+        <h2>Prąd</h2>
+        <p>IMZU, umowa z dystrybutorem, stawki, podłączenie licznika</p>
+      </div>
+      <div>
+        <h2>Woda</h2>
+        <p>najpewniej ogarnia wspólnota/zarządca</p>
+      </div>
+      <div>
+        <h2>Ogrzewanie</h2>
+        <p>najpewniej ogarnia wspólnota/zarządca</p>
+      </div>
+      <div>
+        <h2>Gaz - jeśli jest potrzebny!</h2>
+        <p>najpewniej ogarnia wspólnota/zarządca</p>
+      </div>
+      <div>
+        <h2>Internet i telewizja</h2>
         <p>
-          Tutaj po kolei: umowa rezerwacji, potem umowa deweloperska, a na końcu
-          akt przekazania własności.
+          tutaj uwaga: poczekaj i zobacz, czy nie ma przedstawiciela
+          dzielnicy/obszaru danych dostawców/firm
         </p>
-      </article>
-      <article>
-        <h1>Do załatwienia z bankiem/doradcą finansowym</h1>
-        <p>
-          Najpierw wstępne rozpoznanie i wnioski kredytowe (najlepiej do kilku
-          banków). Potem konkretna umowa kredytu i reszta w zależności od jej
-          postanowień.
-        </p>
-      </article>
-      <article>
-        <h1>Bonus: ubezpieczenie mieszkania</h1>
-        <p>
-          W zasadzie mogłoby być zarówno w części do załatwienia z deweloperem,
-          jak i z bankiem, bo dowód posiadanego ubezpieczenia przydaje się w
-          kilku miejscach. Często gdy powstaje nowe osiedle, to niektóre firmy
-          ubezpieczeniowe przygotowują specjalną ofertę dla tego obszaru - jeśli
-          możesz, poczekaj na info od sąsiadów albo ogłoszenie na klatce.
-        </p>
-      </article>
-      <article>
-        <h1>Do załatwienia z urzędami wszelkiej maści</h1>
-        <p>
-          Sporo rzeczy, więcej niż przez całe poprzednie życie: podatki od
-          nieruchomości, zgłoszenia do skarbówki, wpisy do Księgi Wieczystej...
-        </p>
-      </article>
-      <article>
-        <h1>Do załatwienia z dostawcami mediów</h1>
-        <p>
-          Podstawy, które będą Ci potrzebne do docelowego życia w tym
-          mieszkaniu: prąd, woda, gaz, internet, telewizja - co kto lubi.
-        </p>
-        <div class="tiles">
-          <div>
-            <h2>Prąd</h2>
-            <p>IMZU, umowa z dystrybutorem, stawki, podłączenie licznika</p>
-          </div>
-          <div>
-            <h2>Woda</h2>
-            <p>najpewniej ogarnia wspólnota/zarządca</p>
-          </div>
-          <div>
-            <h2>Ogrzewanie</h2>
-            <p>najpewniej ogarnia wspólnota/zarządca</p>
-          </div>
-          <div>
-            <h2>Gaz - jeśli jest potrzebny!</h2>
-            <p>najpewniej ogarnia wspólnota/zarządca</p>
-          </div>
-          <div>
-            <h2>Internet i telewizja</h2>
-            <p>
-              tutaj uwaga: poczekaj i zobacz, czy nie ma przedstawiciela
-              dzielnicy/obszaru danych dostawców/firm
-            </p>
-          </div>
-        </div>
-      </article>
-      <article>
-        <h1>Bonus nr 2: wspólnota mieszkaniowa lub zarządca</h1>
-        <p>
-          Prawdopodobnie będziecie chcieli zmienić zarządcę, którego narzucił
-          deweloper. Warto wykorzystać wczesny etap, kiedy sąsiedzi są jeszcze
-          dość zaangażowani i obecni - potem sporo ludzi wynajmuje mieszkania i
-          przestaje się nimi interesować. Z drugiej strony: do takiej zmiany
-          potrzebujecie większości głosów właścicieli mieszkań.
-        </p>
-      </article>
-    </section>
-  </body>
-  <footer hx-get="htmx-elements/footer.html" hx-trigger="load"></footer>
-</html>
+      </div>
+    </div>
+  </article>
+  <article>
+    <h1>Bonus nr 2: wspólnota mieszkaniowa lub zarządca</h1>
+    <p>
+      Prawdopodobnie będziecie chcieli zmienić zarządcę, którego narzucił
+      deweloper. Warto wykorzystać wczesny etap, kiedy sąsiedzi są jeszcze dość
+      zaangażowani i obecni - potem sporo ludzi wynajmuje mieszkania i przestaje
+      się nimi interesować. Z drugiej strony: do takiej zmiany potrzebujecie
+      większości głosów właścicieli mieszkań.
+    </p>
+  </article>
+</section>
