--- a/sprawy-projektowe.html
+++ b/sprawy-projektowe.html
@@ -1,122 +1,64 @@
-<!DOCTYPE html>
-<html lang="pl">
-  <head>
-    <!-- Google Tag Manager -->
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-53VRCPPP");
-    </script>
-    <!-- End Google Tag Manager -->
-    <title>Sprawy projektowe – MieszkAnka</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js"></script>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- paragraph + h1-h2 font -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-    />
-    <!-- title font -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-    />
-    <link rel="stylesheet" href="style/main-stylesheet.css" />
-    <meta
-      name="description"
-      content="Poradnik, który tworzę w trakcie kupowania pierwszego mieszkania."
-    />
-    <meta name="author" content="amk" />
-  </head>
-  <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-53VRCPPP"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <header hx-get="htmx-elements/header.html" hx-trigger="load"></header>
-    <section class="subpage-lead">
-      <h1>Sprawy projektowe</h1>
-      <!-- stolarz vs Ikea; - zdjęcia/obrazy??? może np. kiepskie floor plany i jak
+<section class="subpage-lead">
+  <h1>Sprawy projektowe</h1>
+  <!-- stolarz vs Ikea; - zdjęcia/obrazy??? może np. kiepskie floor plany i jak
         je poprawić? / - cały dział projektowanie: czego w ogóle chcesz od tego
         mieszkania? - tricki architektoniczne, typu kolorowy sufit, ukryte drzwi 
         -->
-      <p>
-        Zaczynasz się zastanawiać: stolarz czy Ikea? Zacznij od tego, czego w
-        ogóle chcesz od swojego mieszkania. Z czasem postaram się też podrzucić
-        tu kilka mniej banalnych rozwiązań, na które my postawiliśmy – na
-        przykład kolorowe sufity, ukryte drzwi czy okienko między biurem a
-        kuchnią rodem ze szkolnej stołówki.
-      </p>
-    </section>
-    <section class="subpage-content">
-      <article>
-        <h1>Architekt czy nie?</h1>
-        <p>
-          Czy chcesz architekta? Nie musisz, da się bez. Szczególnie, gdy masz
-          chłopaka prawie architekta. Ale fajne są usługi sprawdzenia własnego
-          projektu. Jeśli masz dobrego fachowca, to możesz bez architekta.
-          <strong
-            >Jeśli nie masz dobrego fachowca, to lepiej mieć architekta</strong
-          >. Zbieraj faktury, podpisuj umowy itd.
-        </p>
-      </article>
-      <article>
-        <h1>Twoje założenia do projektu</h1>
-        <p>
-          "Twoje" to słowo-klucz. Nie interesują Cię trendy, ale to, jak żyjesz
-          na co dzień. Co Cię denerwuje? Jakie masz plany?
-        </p>
-      </article>
-      <article>
-        <h1>Nasze doświadczenia: trust the process</h1>
-        <p>
-          Ku pokrzepieniu serc, kilka kolaży z samodzielnie dobranymi
-          materiałami.
-        </p>
+  <p>
+    Zaczynasz się zastanawiać: stolarz czy Ikea? Zacznij od tego, czego w ogóle
+    chcesz od swojego mieszkania. Z czasem postaram się też podrzucić tu kilka
+    mniej banalnych rozwiązań, na które my postawiliśmy – na przykład kolorowe
+    sufity, ukryte drzwi czy okienko między biurem a kuchnią rodem ze szkolnej
+    stołówki.
+  </p>
+</section>
+<section class="subpage-content">
+  <article>
+    <h1>Architekt czy nie?</h1>
+    <p>
+      Czy chcesz architekta? Nie musisz, da się bez. Szczególnie, gdy masz
+      chłopaka prawie architekta. Ale fajne są usługi sprawdzenia własnego
+      projektu. Jeśli masz dobrego fachowca, to możesz bez architekta.
+      <strong>Jeśli nie masz dobrego fachowca, to lepiej mieć architekta</strong
+      >. Zbieraj faktury, podpisuj umowy itd.
+    </p>
+  </article>
+  <article>
+    <h1>Twoje założenia do projektu</h1>
+    <p>
+      "Twoje" to słowo-klucz. Nie interesują Cię trendy, ale to, jak żyjesz na
+      co dzień. Co Cię denerwuje? Jakie masz plany?
+    </p>
+  </article>
+  <article>
+    <h1>Nasze doświadczenia: trust the process</h1>
+    <p>
+      Ku pokrzepieniu serc, kilka kolaży z samodzielnie dobranymi materiałami.
+    </p>
 
-        <div class="album">
-          <!-- class idzie do picture czy do img??? -->
-          <picture class="album">
-            <img
-              class="album-item"
-              src="media/kafelki.jpg"
-              alt="Kolaż płytek do łazienki. Zawiera trzy płytki: gładką antracytową, białą z delikatnym wzorem i turkusowy arkusz mozaiki w kształcie rybich łusek."
-            />
-          </picture>
-          <picture class="album">
-            <img
-              class="album-item"
-              src="media/panele.jpg"
-              alt="Kolaż paneli i płytek na podłogę. Zawiera dwa panele w jaśniejszym i ciemniejszym odcieniu drewna oraz jedną płytkę imitującą ciemne drewno."
-            />
-          </picture>
-          <picture class="album">
-            <img
-              class="album-item"
-              src="media/panel1.jpg"
-              alt="Pojedynczy panel trzymany w ręku przez mężczyznę w sklepe. Panel jest w ciepłym odcieniu jasnego drewna, z widocznymi słojami."
-            />
-          </picture>
-        </div>
-      </article>
-    </section>
-  </body>
-  <footer hx-get="htmx-elements/footer.html" hx-trigger="load"></footer>
-</html>
+    <div class="album">
+      <!-- class idzie do picture czy do img??? -->
+      <picture class="album">
+        <img
+          class="album-item"
+          src="media/kafelki.jpg"
+          alt="Kolaż płytek do łazienki. Zawiera trzy płytki: gładką antracytową, białą z delikatnym wzorem i turkusowy arkusz mozaiki w kształcie rybich łusek."
+        />
+      </picture>
+      <picture class="album">
+        <img
+          class="album-item"
+          src="media/panele.jpg"
+          alt="Kolaż paneli i płytek na podłogę. Zawiera dwa panele w jaśniejszym i ciemniejszym odcieniu drewna oraz jedną płytkę imitującą ciemne drewno."
+        />
+      </picture>
+      <picture class="album">
+        <img
+          class="album-item"
+          src="media/panel1.jpg"
+          alt="Pojedynczy panel trzymany w ręku przez mężczyznę w sklepe. Panel jest w ciepłym odcieniu jasnego drewna, z widocznymi słojami."
+        />
+      </picture>
+    </div>
+  </article>
+</section>
