--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" type="image/x-icon" href="./media/favicon-32x32.ico" />
     <!-- paragraph + h1-h2 font -->
     <link
       rel="stylesheet"
