cleanup: delete htmx header&footer; delete img

--- a/sprawy-budowlane.html
+++ b/sprawy-budowlane.html
@@ -21,20 +21,9 @@
     </p>
     <p>
       Większość firm zajmujących się odbiorem mieszkań oferuje też gotowy raport
-      usterek po spotkaniu. Podgląd fragmentu takiego raportu możesz zobaczyć
-      poniżej. Warto poprosić o taki dokument, może się przydać, gdy deweloper
-      nie będzie chciał współpracować.
+      usterek po spotkaniu. Warto poprosić o taki dokument, może się przydać,
+      gdy deweloper nie będzie chciał współpracować.
     </p>
-    <div class="album">
-      <picture class="album">
-        <img
-          class="album-item"
-          src="media/raport.jpg"
-          alt="Fragment raportu odbioru mieszkania z inżynierem. Widoczne logo firmy inspekcjadomu.pl i dwa zdjęcia wnętrza wentylacji."
-          width="80%"
-        />
-      </picture>
-    </div>
   </article>
   <article>
     <h1>Kolejność wykańczania</h1>
