--- a/main-page.html
+++ b/main-page.html
@@ -6,7 +6,7 @@
     wiem, zobaczymy.
   </p>
 </section>
-<section>
+<section class="subpage-content">
   <h1>Sprawdź, czego możesz się tu spodziewać</h1>
   <article>
     <h2>O czym jest ta strona?</h2>
