js small fix: empty path for main page, no .html in url

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </svg>
       </section>
       <nav>
-        <a onclick="onMenuClick(event)" href="/main-page">Strona główna </a>
+        <a onclick="goHome(event)" href="/">Strona główna </a>
         <a onclick="onMenuClick(event)" href="/sprawy-koncepcyjne"
           >Sprawy koncepcyjne
         </a>
