sticky header + redesign

--- a/main-page.html
+++ b/main-page.html
@@ -1,4 +1,4 @@
-<section class="main-quote">
+<section class="subpage-lead">
   <p>
     Lubisz mieć dach nad głową? Jasne, to dość popularne hobby. Wszyscy chcemy
     być domni. Jeśli planujesz opuścić grono wierzących niepraktykujących i w
@@ -7,7 +7,6 @@
   </p>
 </section>
 <section class="subpage-content">
-  <h1>Sprawdź, czego możesz się tu spodziewać</h1>
   <article>
     <h2>O czym jest ta strona?</h2>
     <p>
@@ -28,29 +27,6 @@
       skłoniło do podjęcia tego tematu publicznie? Frustracja, przede wszystkim.
       Ale to też trochę tak jakbym zrobiła pracę domową sama, a potem podzieliła
       się nią z innymi. Może komuś się przyda.
-    </p>
-  </article>
-</section>
-<section class="updates">
-  <h1>Aktualizacje – na jakim etapie jesteśmy?</h1>
-  <article>
-    <h2>Stan na: sierpień 2025</h2>
-    <p>
-      Mieszkanie jest już kupione, kredyt się spłaca. Wykończenie w toku: mamy
-      położone gładzie i wylewki, ale panele i kafelki czekają na swoją kolej.
-      Podobnie jak armatura do łazienki i zmiękczacz wody. Najnowsze osiągnięcie
-      to grzejnik kanałowy w końcu na swoim miejscu. Co prawda jeszcze nie
-      grzeje, ale patrzyliście na datę? Jest sierpień. Poszliśmy w końcu do Enei
-      zadać sakramentalne pytanie. Okazało się, że jednak chcą, żeby im płacić.
-      No cóż.
-    </p>
-  </article>
-  <article>
-    <h2>Stan na: lipiec 2025</h2>
-    <p>
-      Mamy już prąd, ale za niego nie płacimy. Nadal się waham, czy iść do Enei
-      zapytać, czy chcą moje pieniądze. Poza tym dużo się nie zmieniło - ten
-      miesiąc obfitował w ważniejsze sprawy, na przykład urlop.
     </p>
   </article>
 </section>
