kalkulator form in progress

--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
         <a onclick="onMenuClick(event)" href="/dziennik-budowy"
           >Dziennik budowy
         </a>
+        <!-- <a onclick="onMenuClick(event)" href="/kalkulator">Kalkulator </a> -->
       </nav>
     </header>
     <section id="main"></section>
