--- a/sprawy-budowlane.html
+++ b/sprawy-budowlane.html
@@ -26,7 +26,54 @@
     </p>
   </article>
   <article>
+    <h1>Co z tą ekipą?</h1>
+    <p>
+      Ekipa wykończeniowa z polecenia to zwykle najlepszy wybór - ale zależy
+      też, kto poleca. Jeśli koleżanka zachwala swojego majstra, warto wprosić
+      się na kawę połączoną z kontrolą jakości położonych przez niego płytek.
+      Tak na wszelki wypadek: ufaj, ale sprawdzaj.
+    </p>
+    <p>
+      Nawet z najlepszym majstrem <strong>warto podpisać umowę</strong>.
+      Wypiszcie w niej dość szczegółowo wszystkie prace, koszty, orientacyjny
+      termin; zapiszcie też klauzule o ewentualnych dodatkowych kosztach czy
+      opóźnieniach. Jeśli majster nie będzie chciał podpisać umowy... Cóż, dobry
+      majster sam zaproponuje taki dokument, więc zdecyuj na własną rękę ;)
+    </p>
+    <h2>Cechy dobrego majstra</h2>
+    <ul>
+      <li>
+        Wykończył w życiu więcej niż jedno mieszkanie, najlepiej też u kogoś
+        niespokrewnionego/niespowinowaconego.
+      </li>
+      <li>
+        Dysponuje rzeczami takimi jak odkurzaczem, szmata, która posłuży za
+        wycieraczkę - słowem rozumie, że ten lokal w pewnym momencie przestaje
+        być placem budowy, a sąsiedzi nie doceniają mozaiki z białych śladów na
+        korytarzu.
+      </li>
+      <li>
+        Ma kolegów. Najlepiej takich, którzy znają się na tym, z czego sam
+        majster jest słabszy.
+      </li>
+      <li>
+        Szanuje Twoją wizję i projekt. Uwaga - to nie znaczy, że ma się z nimi
+        zgadzać. Może marudzić. Może wyzywać, że nikomu nie są potrzebne te ledy
+        na suficie i kto to widział robić takie mikropłyki w łazience. Dopóki po
+        takim monologu ostatecznie bierze się do wprowadzania Twoich pomysłów w
+        życie - to jest OK.
+      </li>
+    </ul>
+  </article>
+  <article>
     <h1>Kolejność wykańczania</h1>
+    <p>
+      Od czego zacząć? Na czym skończyć? Wykańczanie mieszkania to domino -
+      jedna rzecz ciągnie za sobą drugą. Oprócz kolejności, musisz też ustalić
+      (ze sobą lub przyszłymi współlokatorami) osobisty próg bolu: czyli jak
+      mało wystarczy Wam do tego, żeby móc się wprowadzić. Poniższa lista to
+      moje subiektywne podejście do tego problemu.
+    </p>
     <ol>
       <li>Najpierw to, co niezbędne do wprowadzenia się:</li>
       <ul>
