--- a/index.html
+++ b/index.html
@@ -10,16 +10,5 @@ layout: default
     <header></header>
     <section id="main"></section>
   </body>
-  <footer>
-    <p>
-      2025 @ amk 
-      <br />
-      Tworzę tę stronę w ramach nauki web developmentu (i przy okazji
-      wyładowania frustracji związanej z zakupem mieszkania). Znajdziesz ją też
-      na moim
-      <a href="https://github.com/annopodobna" target="_blank">GitHubie</a>. Nie
-      odpowiadam za błędne decyzje życiowe, które podejmiesz na podstawie
-      zamieszczonych tu treści.
-    </p>
-  </footer>
+  <footer></footer>
 </html>
