all pages with Jekyll layout

--- a/index.html
+++ b/index.html
@@ -3,12 +3,35 @@ title: MieszkAnka
 layout: default
 ---
 
-<!DOCTYPE html>
-<html lang="pl">
-  <head></head>
-  <body>
-    <header></header>
-    <section id="main"></section>
-  </body>
-  <footer></footer>
-</html>
+<section class="subpage-lead">
+  <p>
+    Lubisz mieć dach nad głową? Jasne, to dość popularne hobby. Wszyscy chcemy
+    być domni. Jeśli planujesz opuścić grono wierzących niepraktykujących i w
+    końcu przenieść się na swoje - może nie być lekko. A czy warto? Jeszcze nie
+    wiem, zobaczymy.
+  </p>
+</section>
+<section class="subpage-content">
+  <article>
+    <h2>O czym jest ta strona?</h2>
+    <p>
+      Kupujemy pierwsze mieszkanie od dewelopera i świetnie się bawimy.
+      Właściwie to czasem lepiej, czasem gorzej, czasem mamy ochotę rzucić czymś
+      (albo sobą) o ścianę – ale ważne, że teraz to już nasza ściana i trzeba
+      sobie jakoś z nią poradzić. Jak? Nikt nas tego nie nauczył. Więc uczymy
+      się sami – na błędach swoich i cudzych.
+    </p>
+  </article>
+  <article>
+    <h2>Kim jestem?</h2>
+    <p>
+      <!-- sup daje dziwnie duży rozmiar fontu-->
+      Mam 30 lat, od niedawna kredyt i 59 m<sup>2</sup>. <br />Jakie mam
+      kwalifikacje, żeby doradzać w kwestiach mieszkaniowych? Żadne – poza
+      doświadczeniem z pierwszej ręki i nauką na własnych błędach.<br />Co mnie
+      skłoniło do podjęcia tego tematu publicznie? Frustracja, przede wszystkim.
+      Ale to też trochę tak jakbym zrobiła pracę domową sama, a potem podzieliła
+      się nią z innymi. Może komuś się przyda.
+    </p>
+  </article>
+</section>
